Fix Compositing.SurfaceAggregator.LatestInFlightSurface.ManhattanDistanceToPrimary

This CL remove the extra line in histogram.xml that's preventing the UMA from working.

In addition, we rename "Compositing.SurfaceManager.TemporarySurfaces" to
"Compositing.SurfaceManager.TemporaryReferences" as the data is actually counting
references not surfaces.

Bug: 867534
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel
Change-Id: I7c4e4fc1a399d7e0d5fd8c6cea6a166f0ffbba76
Reviewed-on: https://chromium-review.googlesource.com/1150419
Commit-Queue: Andre Kaba <akaba@google.com>
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Reviewed-by: Alexei Svitkine <asvitkine@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578041}