components/viz/service/surfaces/surface_manager.cc
@@ -31,8 +31,8 @@ namespace {
 
 const char kUmaAliveSurfaces[] = "Compositing.SurfaceManager.AliveSurfaces";
 
-const char kUmaTemporarySurfaces[] =
-    "Compositing.SurfaceManager.TemporarySurfaces";
+const char kUmaTemporaryReferences[] =
+    "Compositing.SurfaceManager.TemporaryReferences";
 
 constexpr base::TimeDelta kExpireInterval = base::TimeDelta::FromSeconds(10);
 
@@ -238,7 +238,7 @@ void SurfaceManager::GarbageCollectSurfaces() {
   UMA_HISTOGRAM_CUSTOM_COUNTS(kUmaAliveSurfaces, reachable_surfaces.size(), 1,
                               200, 50);
   // Log the number of temporary references after a garbage collection.
-  UMA_HISTOGRAM_CUSTOM_COUNTS(kUmaTemporarySurfaces,
+  UMA_HISTOGRAM_CUSTOM_COUNTS(kUmaTemporaryReferences,
                               temporary_references_.size(), 1, 200, 50);
 
   std::vector<SurfaceId> surfaces_to_delete;
